--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,17 @@
 {
-  "extends": "next/core-web-vitals",
-  "ignorePatterns": ["**/*"]
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": ["warn", { 
+      "argsIgnorePattern": "^_",
+      "varsIgnorePattern": "^_" 
+    }],
+    "@typescript-eslint/no-explicit-any": "warn",
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-img-element": "warn"
+  }
 }
